maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for(i <- 0 to getWorldHeight() - 1) {
        ^